--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -56,7 +56,6 @@ html > body {
   top: 0;
   transform: translateZ(10000px);
   width: 100%;
-  z-index: 10000;
   &.fv-light {
     background: $shadow-color-light;
   }
